<resources>
    <string name="app_name">Vossified</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>
    <string name="categories">Categories</string>
    <string name="item_request">Item Request</string>
    <string name="discard_changes">Discard changes</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log In</string>
    <string name="cost">Kes. %1$.0f</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="order">Order</string>
    <string name="sort">Sort</string>
    <string name="item_name">Item name</string>
    <string name="state">Added state</string>
    <string name="last_modified">Last Modified</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="no_items">No %1$s found, add some by clicking \"+\"</string>
    <string name="no_results">No results found for \"%1$s\"</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="avg_cost">Average Cost</string>
    <string name="greater_than">Greater than</string>
    <string name="less_than">Less than</string>
    <string name="item_description">Item description</string>
    <string name="category">Category</string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="error_exists_db">This item already exists in the database</string>
    <string name="add_image">Add Image</string>
    <string name="error_empty">Please fill this field</string>
    <string name="error_add_db">An error occurred while submitting your request</string>
    <string name="delete">Delete</string>
    <string name="save_and_close">Save and close</string>
    <string name="dont_save">Don\'t save</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="have_an_account_log_in">Have an account? Log in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_your_email">Confirm your email and we\'ll send the instructions.</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_out">Sign Out</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
