<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_add_shopping_cart"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_request"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/item_request" />
    </group>

    <group
        android:id="@+id/nav_group_sign">
        <item
            android:id="@+id/nav_sign"
            android:icon="@drawable/ic_person"
            android:title="@string/action_sign_in_short" />
    </group>


</menu>
