<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/layout_order" />

        <RadioGroup
            android:id="@+id/radioGroup_user_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_order_user_request_itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name" />

            <RadioButton
                android:id="@+id/radio_order_user_request_addedState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state" />

            <RadioButton
                android:id="@+id/radio_order_user_request_lastModified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_modified" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>