<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox_filter_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/item_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_filter_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_filter_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditText_filter_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.cardview.widget.CardView>

        <CheckBox
            android:id="@+id/checkbox_filter_item_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:text="@string/avg_cost" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_filter_item_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:visibility="gone">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_filter_item_cost_greater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_item_costGreater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/greater_than"
                        android:inputType="numberDecimal"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout_filter_item_costLess"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout_filter_item_cost_greater">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditText_filter_item_costLess"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/less_than"
                        android:inputType="numberDecimal"
                        android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>